# JaWaraT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.sh
src/attacks/: attack_utils.cpp  attack_utils.h  bruteforce_attack.cpp  bruteforce_attack.h  dictionary_attack.cpp  dictionary_attack.h
src/core/: jwt_cracker.cpp  jwt_cracker.h  jwt_info.cpp  jwt_info.h
wordlists/: common-jwt-secrets.txt
